fix: depoiments responsive

--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
         class="container mx-auto px-5 flex flex-col-reverse xl:flex-row items-start md:items-center xl:items-start justify-between md:justify-center"
       >
         <div
-          class="w-full md:mx-auto flex flex-col-reverse md:flex-row xl:flex-col items-center justify-center md:pt-[93px] xl:pt-0 md:max-w-[606px] xl:max-w-[277px]"
+          class="w-full md:mx-auto flex flex-col-reverse md:flex-row xl:flex-col items-center justify-center md:pt-[93px] xl:pt-0 md:max-w-[606px] xl:max-w-[277px] xl:!m-0 xl:!mr-[130px]"
         >
           <div
-            class="w-full max-w-[218px] md:max-w-[255px] xl:max-w-[277px] md:h-[541px] xl:h-[564px] relative pt-10 md:pt-0 mb-44 md:mb-0"
+            class="w-full max-w-[218px] md:max-w-[255px] xl:max-w-[277px] md:h-[541px] xl:h-[564px] relative pt-10 md:pt-0"
           >
             <img
               class="absolute hidden xl:flex -z-10 -left-[214px] top-[88px] max-w-[377px]"
@@ -353,123 +353,113 @@
         </div>
       </div>
     </section>
-    <!-- 
-    <section class="pt-32">
-      <div class="container px-5">
-        <div class="mb-10 flex items-end justify-between relative w-full">
+
+    <section class="pt-20 md:pt-[109px] xl:pt-[134px]">
+      <div class="container p-0 max-w-[1214px] mx-auto max-md:max-w-full">
+        <div
+          class="mb-9 md:mb-14 flex flex-col items-center justify-center xl:items-end xl:justify-between relative w-full"
+        >
           <h2
-            class="font-Poppins text-brand-grey-2 -tracking-[1px] leading-[112%] font-bold text-[4rem] mb-3 w-full"
+            class="font-Poppins text-brand-grey-2 -tracking-[1px] leading-[112%] font-bold text-2xl md:text-4xl xl:text-[40px] text-center xl:text-start w-full"
           >
             Prático, fácil, moderno
             <span
-              class="block font-Poppins text-brand-grey-6 -tracking-[1px] leading-[112%] font-bold text-[4rem]"
-              >Você resolve tudo sem estresse 😊</span
+              class="block font-Poppins text-brand-grey-6 -tracking-[1px] leading-[112%] font-bold text-[28px] md:text-4xl xl:text-[40px] w-full md:w-full xl:max-w-[618px] text-center xl:text-start mb-9 md:mb-12 xl:mb-0 pt-3 xl:pt-[14px]"
+              >Você resolve tudo sem estresse</span
             >
           </h2>
           <div class="paginator-depoimentos relative flex !w-auto"></div>
         </div>
-        <div class="depoimentos overflow-hidden">
+        <div class="depoimentos overflow-hidden px-5 xl:px-0">
           <div class="swiper-wrapper">
             <div
-              class="swiper-slide w-full max-w-[38.4rem] h-[20.9rem] bg-brand-grey-1/[55%] rounded-lg pt-[3.7rem] pr-[3.2rem] pb-[2.3rem] pl-[3.2rem]"
+              class="swiper-slide w-[249px] xl:max-w-full bg-brand-grey-1/[55%] rounded-lg pt-[37px] px-[32px] pb-10"
             >
-              <div class="flex items-center justify-between mb-[2.1rem]">
+              <div class="flex items-center justify-between mb-5">
                 <strong
-                  class="font-Poppins text-brand-grey-5 font-semibold text-[1.8rem] leading-[112%] -tracking-[1px]"
-                  >@matheusguedes</strong
+                  class="font-Poppins text-brand-grey-5 font-semibold text-lg leading-[112%] -tracking-[1px]"
+                  >@gewsf</strong
                 >
                 <img src="./src/assets/img/icon-twiiter.svg" alt="" />
               </div>
-              <p
-                class="font-Inter text-[1.8rem] leading-[150%] text-brand-grey-4"
-              >
-                Valeu @banconeon! Gostei muito da embalagem e o cartão é brabo!
-                #bancoNeon
+              <p class="font-Inter text-lg leading-[150%] text-brand-grey-4">
+                Valeu @banconenon! Linda embalagem e o cartão tbm é lindo! Muito
+                amor por esse banco #bancoNeon
               </p>
             </div>
             <div
-              class="swiper-slide w-full max-w-[38.4rem] h-[20.9rem] bg-brand-grey-1/[55%] rounded-lg pt-[3.7rem] pr-[3.2rem] pb-[2.3rem] pl-[3.2rem]"
+              class="swiper-slide w-[249px] xl:max-w-full bg-brand-grey-1/[55%] rounded-lg pt-[37px] px-[32px] pb-10"
             >
-              <div class="flex items-center justify-between mb-[2.1rem]">
+              <div class="flex items-center justify-between mb-5">
                 <strong
-                  class="font-Poppins text-brand-grey-5 font-semibold text-[1.8rem] leading-[112%] -tracking-[1px]"
-                  >@matheusguedes</strong
+                  class="font-Poppins text-brand-grey-5 font-semibold text-lg leading-[112%] -tracking-[1px]"
+                  >@gewsf</strong
                 >
                 <img src="./src/assets/img/icon-twiiter.svg" alt="" />
               </div>
-              <p
-                class="font-Inter text-[1.8rem] leading-[150%] text-brand-grey-4"
-              >
-                Valeu @banconeon! Gostei muito da embalagem e o cartão é brabo!
-                #bancoNeon
+              <p class="font-Inter text-lg leading-[150%] text-brand-grey-4">
+                Valeu @banconenon! Linda embalagem e o cartão tbm é lindo! Muito
+                amor por esse banco #bancoNeon
               </p>
             </div>
             <div
-              class="swiper-slide w-full max-w-[38.4rem] h-[20.9rem] bg-brand-grey-1/[55%] rounded-lg pt-[3.7rem] pr-[3.2rem] pb-[2.3rem] pl-[3.2rem]"
+              class="swiper-slide w-[249px] xl:max-w-full bg-brand-grey-1/[55%] rounded-lg pt-[37px] px-[32px] pb-10"
             >
-              <div class="flex items-center justify-between mb-[2.1rem]">
+              <div class="flex items-center justify-between mb-5">
                 <strong
-                  class="font-Poppins text-brand-grey-5 font-semibold text-[1.8rem] leading-[112%] -tracking-[1px]"
-                  >@matheusguedes</strong
+                  class="font-Poppins text-brand-grey-5 font-semibold text-lg leading-[112%] -tracking-[1px]"
+                  >@gewsf</strong
                 >
                 <img src="./src/assets/img/icon-twiiter.svg" alt="" />
               </div>
-              <p
-                class="font-Inter text-[1.8rem] leading-[150%] text-brand-grey-4"
-              >
-                Valeu @banconeon! Gostei muito da embalagem e o cartão é brabo!
-                #bancoNeon
+              <p class="font-Inter text-lg leading-[150%] text-brand-grey-4">
+                Valeu @banconenon! Linda embalagem e o cartão tbm é lindo! Muito
+                amor por esse banco #bancoNeon
               </p>
             </div>
             <div
-              class="swiper-slide w-full max-w-[38.4rem] h-[20.9rem] bg-brand-grey-1/[55%] rounded-lg pt-[3.7rem] pr-[3.2rem] pb-[2.3rem] pl-[3.2rem]"
+              class="swiper-slide w-[249px] xl:max-w-full bg-brand-grey-1/[55%] rounded-lg pt-[37px] px-[32px] pb-10"
             >
-              <div class="flex items-center justify-between mb-[2.1rem]">
+              <div class="flex items-center justify-between mb-5">
                 <strong
-                  class="font-Poppins text-brand-grey-5 font-semibold text-[1.8rem] leading-[112%] -tracking-[1px]"
-                  >@matheusguedes</strong
+                  class="font-Poppins text-brand-grey-5 font-semibold text-lg leading-[112%] -tracking-[1px]"
+                  >@gewsf</strong
                 >
                 <img src="./src/assets/img/icon-twiiter.svg" alt="" />
               </div>
-              <p
-                class="font-Inter text-[1.8rem] leading-[150%] text-brand-grey-4"
-              >
-                Valeu @banconeon! Gostei muito da embalagem e o cartão é brabo!
-                #bancoNeon
+              <p class="font-Inter text-lg leading-[150%] text-brand-grey-4">
+                Valeu @banconenon! Linda embalagem e o cartão tbm é lindo! Muito
+                amor por esse banco #bancoNeon
               </p>
             </div>
             <div
-              class="swiper-slide w-full max-w-[38.4rem] h-[20.9rem] bg-brand-grey-1/[55%] rounded-lg pt-[3.7rem] pr-[3.2rem] pb-[2.3rem] pl-[3.2rem]"
+              class="swiper-slide w-[249px] xl:max-w-full bg-brand-grey-1/[55%] rounded-lg pt-[37px] px-[32px] pb-10"
             >
-              <div class="flex items-center justify-between mb-[2.1rem]">
+              <div class="flex items-center justify-between mb-5">
                 <strong
-                  class="font-Poppins text-brand-grey-5 font-semibold text-[1.8rem] leading-[112%] -tracking-[1px]"
-                  >@matheusguedes</strong
+                  class="font-Poppins text-brand-grey-5 font-semibold text-lg leading-[112%] -tracking-[1px]"
+                  >@gewsf</strong
                 >
                 <img src="./src/assets/img/icon-twiiter.svg" alt="" />
               </div>
-              <p
-                class="font-Inter text-[1.8rem] leading-[150%] text-brand-grey-4"
-              >
-                Valeu @banconeon! Gostei muito da embalagem e o cartão é brabo!
-                #bancoNeon
+              <p class="font-Inter text-lg leading-[150%] text-brand-grey-4">
+                Valeu @banconenon! Linda embalagem e o cartão tbm é lindo! Muito
+                amor por esse banco #bancoNeon
               </p>
             </div>
             <div
-              class="swiper-slide w-full max-w-[38.4rem] h-[20.9rem] bg-brand-grey-1/[55%] rounded-lg pt-[3.7rem] pr-[3.2rem] pb-[2.3rem] pl-[3.2rem]"
+              class="swiper-slide w-[249px] xl:max-w-full bg-brand-grey-1/[55%] rounded-lg pt-[37px] px-[32px] pb-10"
             >
-              <div class="flex items-center justify-between mb-[2.1rem]">
+              <div class="flex items-center justify-between mb-5">
                 <strong
-                  class="font-Poppins text-brand-grey-5 font-semibold text-[1.8rem] leading-[112%] -tracking-[1px]"
-                  >@matheusguedes</strong
+                  class="font-Poppins text-brand-grey-5 font-semibold text-lg leading-[112%] -tracking-[1px]"
+                  >@gewsf</strong
                 >
                 <img src="./src/assets/img/icon-twiiter.svg" alt="" />
               </div>
-              <p
-                class="font-Inter text-[1.8rem] leading-[150%] text-brand-grey-4"
-              >
-                Valeu @banconeon! Gostei muito da embalagem e o cartão é brabo!
-                #bancoNeon
+              <p class="font-Inter text-lg leading-[150%] text-brand-grey-4">
+                Valeu @banconenon! Linda embalagem e o cartão tbm é lindo! Muito
+                amor por esse banco #bancoNeon
               </p>
             </div>
           </div>
@@ -477,7 +467,7 @@
         </div>
       </div>
     </section>
-
+    <!--
     <section class="pt-[127px] pb-[85px]">
       <div class="container px-5 flex items-center">
         <div class="max-w-[542px]">
@@ -858,6 +848,20 @@
         autoplay: {
           delay: 5000,
           disableOnInteraction: false,
+        },
+        breakpoints: {
+          100: {
+            slidesPerView: 1.3,
+            spaceBetween: 16,
+          },
+          768: {
+            slidesPerView: 1.9,
+            spaceBetween: 15,
+          },
+          1280: {
+            slidesPerView: 3,
+            spaceBetween: 32,
+          },
         },
       });
     </script>
