fix: footer responsive

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
       </div>
     </section>
 
-    <section class="pt-[57px] pb-[85px] xl:pt-[127px]">
+    <section class="pt-[57px] pb-[130px] md:pb-[250px] xl:pt-[127px]">
       <div
         class="container mx-auto max-md:max-w-full max-w-[1214px] px-5 flex flex-col xl:flex-row items-center xl:items-start"
       >
@@ -580,7 +580,7 @@
             alt=""
           />
           <img
-            class="absolute xl:invisible w-[323px] md:w-[582px] xl:w-[510px] top-[146px] md:top-0 xl:right-0"
+            class="absolute xl:invisible w-[323px] md:w-[582px] xl:w-[510px] top-[146px] md:top-0 right-0"
             src="/src/assets/img/circle-conta-digital-mobile.svg"
             alt=""
           />
@@ -588,75 +588,109 @@
       </div>
     </section>
 
-    <footer class="bg-brand-blue pt-12">
-      <div class="container mx-auto px-5">
+    <footer class="bg-brand-blue pt-12 md:pt-9">
+      <div class="container mx-auto max-md:max-w-full max-w-[1214px] px-5">
         <div
-          class="flex justify-between pb-12 mb-14 border-solid border-2 border-[#49C5FD]/20 border-r-0 border-t-0 border-l-0"
+          class="flex flex-col md:flex-row items-center md:justify-between pb-11 xl:pb-12 mb-14 border-solid border-2 border-[#49C5FD]/20 border-r-0 border-t-0 border-l-0"
         >
-          <img src="/src/assets/img/logo.svg" alt="" />
-          <div class="flex items-center gap-7">
+          <img
+            class="max-w-[108px] md:max-w-[131px] mb-8 md:mb-0"
+            src="/src/assets/img/logo.svg"
+            alt=""
+          />
+          <div class="flex flex-col md:flex-row items-center gap-8">
             <span
-              class="text-white text-xl leading-[125%] text-right opacity-70"
+              class="text-white text-sm leading-[125%] text-right opacity-70"
               >Acompanhe nas redes</span
             >
-            <ul class="flex items-center gap-7">
+            <ul class="flex items-center justify-center gap-8">
               <li>
-                <a href=""><img src="/src/assets/img/youtube.svg" alt="" /></a>
-              </li>
-              <li>
-                <a href=""><img src="/src/assets/img/linkedin.svg" alt="" /></a>
-              </li>
-              <li>
-                <a href=""><img src="/src/assets/img/facebook.svg" alt="" /></a>
+                <a href=""
+                  ><img
+                    class="w-5 h-5"
+                    src="/src/assets/img/youtube.svg"
+                    alt=""
+                /></a>
               </li>
               <li>
                 <a href=""
-                  ><img src="/src/assets/img/instagram.svg" alt=""
+                  ><img
+                    class="w-5 h-5"
+                    src="/src/assets/img/linkedin.svg"
+                    alt=""
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    class="w-5 h-5"
+                    src="/src/assets/img/facebook.svg"
+                    alt=""
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    class="w-5 h-5"
+                    src="/src/assets/img/instagram.svg"
+                    alt=""
                 /></a>
               </li>
             </ul>
           </div>
         </div>
         <div
-          class="flex items-start justify-between border-solid border-2 border-[#49C5FD]/20 border-r-0 border-t-0 border-l-0 pb-16 mb-10"
+          class="relative flex flex-col xl:flex-row items-start justify-between border-solid border-2 border-[#49C5FD]/20 border-r-0 border-t-0 border-l-0 pb-[50px] mb-[50px] xl:mb-10"
         >
-          <nav class="w-full max-w-[860px] flex items-start justify-between">
+          <nav
+            class="w-full max-w-[860px] gap-10 grid grid-cols-2 md:grid-cols-3 xl:flex items-start justify-between"
+          >
             <div>
               <strong
-                class="font-poppins font-semibold text-2xl leading-[125%] text-white mb-6 block"
+                class="font-poppins font-semibold text-lg xl:text-base leading-[125%] text-white mb-2 xl:mb-6 block"
                 >Produtos Neon</strong
               >
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Cartão de crédito</a
                   >
                 </li>
               </ul>
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Cartão pré-pago</a
                   >
                 </li>
               </ul>
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Neon Mais</a
                   >
                 </li>
               </ul>
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Investimentos</a
                   >
                 </li>
               </ul>
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Empréstimos</a
                   >
                 </li>
@@ -664,19 +698,23 @@
             </div>
             <div>
               <strong
-                class="font-poppins font-semibold text-2xl leading-[125%] text-white mb-6 block"
+                class="font-poppins font-semibold text-lg xl:text-base leading-[125%] text-white mb-2 xl:mb-6 block"
                 >Conta digital PJ</strong
               >
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Sou MEI</a
                   >
                 </li>
               </ul>
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Sou ME</a
                   >
                 </li>
@@ -684,33 +722,41 @@
             </div>
             <div>
               <strong
-                class="font-poppins font-semibold text-2xl leading-[125%] text-white mb-6 block"
+                class="font-poppins font-semibold text-lg xl:text-base leading-[125%] text-white mb-2 xl:mb-6 block"
                 >Blog</strong
               >
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >#focanodinheiro</a
                   >
                 </li>
               </ul>
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >O poder da comunidade</a
                   >
                 </li>
               </ul>
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Desafio das 52 semanas</a
                   >
                 </li>
               </ul>
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Planilha de gastos</a
                   >
                 </li>
@@ -718,33 +764,41 @@
             </div>
             <div>
               <strong
-                class="font-poppins font-semibold text-2xl leading-[125%] text-white mb-6 block"
+                class="font-poppins font-semibold text-lg xl:text-base leading-[125%] text-white mb-2 xl:mb-6 block"
                 >Institucional</strong
               >
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Conheça a Neon</a
                   >
                 </li>
               </ul>
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Trabalhe conosco</a
                   >
                 </li>
               </ul>
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Termos de uso</a
                   >
                 </li>
               </ul>
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Políticas de privacidade</a
                   >
                 </li>
@@ -752,50 +806,58 @@
             </div>
             <div>
               <strong
-                class="font-poppins font-semibold text-2xl leading-[125%] text-white mb-6 block"
+                class="font-poppins font-semibold text-lg xl:text-base leading-[125%] text-white mb-2 xl:mb-6 block"
                 >Ajuda</strong
               >
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Ouvidoria</a
                   >
                 </li>
               </ul>
               <ul>
-                <li class="mb-7">
-                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                <li class="mb-1 xl:mb-3">
+                  <a
+                    class="text-base xl:text-sm leading-7 text-white/70 hover:text-brand-yellow transition-all duration-300"
+                    href=""
                     >Fale conosco</a
                   >
                 </li>
               </ul>
             </div>
           </nav>
-          <div class="w-full max-w-[280px]">
+          <div
+            class="mt-10 md:mt-0 md:absolute xl:relative md:bottom-10 xl:bottom-0 md:right-0 w-full md:w-[40%] xl:w-[280px]"
+          >
             <button
               class="flex items-center pl-6 mb-6 bg-[#00A5F0]/20 w-full h-[76px] rounded-md"
             >
               <img src="/src/assets/img/envelope.svg" alt="" />
               <div class="ml-6">
                 <strong
-                  class="block text-left font-bold text-xl leading-[150%] text-white"
+                  class="block text-left font-bold text-base xl:text-sm leading-[150%] text-white"
                   >Atendimento</strong
                 >
-                <span class="block text-lg text-white/70 leading-[150%]"
+                <span
+                  class="block text-base xl:text-sm text-white/70 leading-[150%]"
                   >oi@neon.com.br (24 horas)</span
                 >
               </div>
             </button>
             <button
-              class="flex items-center pl-6 mb-6 bg-[#00A5F0]/20 w-full h-[76px] rounded-md"
+              class="flex items-center pl-6 xl:mb-6 bg-[#00A5F0]/20 w-full h-[76px] rounded-md"
             >
               <img src="/src/assets/img/chat.svg" alt="" />
               <div class="ml-6">
                 <strong
-                  class="block text-left font-bold text-xl leading-[150%] text-white"
+                  class="block text-left font-bold text-base xl:text-sm leading-[150%] text-white"
                   >Imprensa:</strong
                 >
-                <span class="block text-lg text-white/70 leading-[150%]"
+                <span
+                  class="block text-base xl:text-sm text-white/70 leading-[150%]"
                   >imprensa@neon.com.br</span
                 >
               </div>
@@ -803,15 +865,26 @@
           </div>
         </div>
         <div
-          class="flex items-start border-solid border-4 border-brand-yellow border-r-0 border-t-0 border-l-0 pb-9"
+          class="flex flex-col xl:flex-row items-center xl:items-center xl:justify-center border-solid border-4 border-brand-yellow border-r-0 border-t-0 border-l-0 pb-9 relative"
         >
-          <div class="text-xl">😀</div>
+          <div class="text-xl mb-4">😀</div>
           <p
-            class="w-full max-w-[660px] ml-6 text-lg leading-[150%] text-white opacity-80"
+            class="w-full max-w-[300px] md:max-w-[660px] xl:max-w-[660px] text-center xl:ml-6 text-md leading-[150%] text-white opacity-80 mb-4"
           >
             Oi! Leu até aqui? Você se preocupa com os mínimos detalhes, mesmo. A
             gente também. Por isso o time Neon está sempre trabalhando para
             fazer a conta digital perfeita para você ;)
+          </p>
+          <p
+            class="absolute w-full max-w-[660px] text-sm leading-[150%] text-white/70 text-center bottom-0 mb-4"
+          >
+            Made with <span class="text-white">💙</span> by
+            <a
+              class="hover:text-brand-yellow opacity-100"
+              href="https://github.com/zmatezz"
+              target="_blank"
+              >zmatez</a
+            >
           </p>
         </div>
       </div>
